# bstat

./: .gitignore  CMakeLists.txt  Makefile  bstat  main.c  tasks
generation/: CMakeLists.txt  generation.c  main.c
include/: bstat.h  cmm.c  cmm.h  cmms.h  dcmm.h  generation.h  hmm.h  processing.h  statistic.h  tests.h
src/: CMakeLists.txt  cmm.c  cmm.h  cmms.c  dcmm.c  hmm.c  processing.c  sequence.c  statistic.c  stream.c  tests.c  util.c
tests/: CMakeLists.txt  cmm_test.c  cmms_test.c  dcmm_test.c  hmm_test.c
